@@ -1,4 +1,6 @@
 # Sparc Debian
+# Dual processor
+MAKEJOBFLAGS = "-j 2"
 TARGETOS = sparc-unknown-linux2.2
 HOSTOS = sparc-unknown-linux2.2
 
